--- a/ClinicApp.Web/Components/App.razor
+++ b/ClinicApp.Web/Components/App.razor
@@ -18,4 +18,19 @@
     <script src="_framework/blazor.web.js"></script>
 </body>
 
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p>Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
+
+
+
 </html>
