--- a/ClinicApp.Web/Layout/NavMenu.razor
+++ b/ClinicApp.Web/Layout/NavMenu.razor
@@ -32,6 +32,16 @@
     </nav>
 </div>
 
+<AuthorizeView Roles="Admin">
+    <Authorized>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="admin">
+                Admin Panel
+            </NavLink>
+        </li>
+    </Authorized>
+</AuthorizeView>
+
 @code {
     private bool collapseNavMenu = true;
 
