--- a/ClinicApp.Web/Components/Layout/NavMenu.razor
+++ b/ClinicApp.Web/Components/Layout/NavMenu.razor
@@ -8,6 +8,16 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
+        <AuthorizeView>
+    <Authorized>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/logout">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
+            </NavLink>
+        </li>
+    </Authorized>
+</AuthorizeView>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
