--- a/ClinicApp.Web/Layout/NavMenu.razor
+++ b/ClinicApp.Web/Layout/NavMenu.razor
@@ -36,7 +36,7 @@
     <Authorized>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="admin">
-                Admin Panel
+               <spam class="accordion io-lock-locked" aria-hidden="true"></spam> Admin
             </NavLink>
         </li>
     </Authorized>
