--- a/ClinicApp.Web/Pages/Home.razor
+++ b/ClinicApp.Web/Pages/Home.razor
@@ -1,7 +1,12 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<h3>Home Page</h3>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+        <p>Welcome, you are logged in ✅</p>
+    </Authorized>
+    <NotAuthorized>
+        <p>Please <a href="/login">login</a>.</p>
+    </NotAuthorized>
+</AuthorizeView>
